--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -6,3 +6,8 @@
     tools:context="com.example.colorpicker.MainActivity"
     tools:ignore="MergeRootFrame" />
 
+<com.example.colorpicker.ColorView android:id="@+id/color_view"
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
+        android:contentDescription="@string/color_view"
+         />
