custom class in xml

--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -4,10 +4,12 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="com.example.colorpicker.MainActivity"
-    tools:ignore="MergeRootFrame" />
+    tools:ignore="MergeRootFrame" >
 
 <com.example.colorpicker.ColorView android:id="@+id/color_view"
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
         android:contentDescription="@string/color_view"
          />
+
+</FrameLayout>
