--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -6,10 +6,46 @@
     tools:context="com.example.colorpicker.MainActivity"
     tools:ignore="MergeRootFrame" >
 
-<com.example.colorpicker.ColorView android:id="@+id/color_view"
+    <ImageView
+        android:id="@+id/title"
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
-        android:contentDescription="@string/color_view"
-         />
+        android:contentDescription="@string/app_name"
+        android:scaleType="center"
+        android:src="@drawable/ic_launcher" />
+    
+    <ImageView
+            android:id="@+id/to_gallery"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="60dp"
+            android:padding="20dp"
+            android:layout_gravity="center_horizontal|bottom"
+            android:contentDescription="@string/to_gallery"
+            android:src="@drawable/ic_launcher" />
+    
+        <ImageView
+            android:id="@+id/to_camera"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="60dp"
+            android:padding="20dp"
+            android:layout_marginLeft="20dp"
+            android:paddingRight="15dp"
+            android:layout_gravity="left|bottom"
+            android:contentDescription="@string/to_camera"
+            android:src="@drawable/ic_launcher" />
+        
+        <ImageView
+            android:id="@+id/to_picker"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="60dp"
+            android:padding="20dp"
+            android:layout_marginRight="20dp"
+            android:paddingLeft="15dp"
+            android:layout_gravity="right|bottom"
+            android:contentDescription="@string/to_picker"
+            android:src="@drawable/ic_launcher" />
 
 </FrameLayout>
