--- a/res/layout/activity_pinpoint.xml
+++ b/res/layout/activity_pinpoint.xml
@@ -10,6 +10,7 @@
         android:id="@+id/selected_photo"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:padding="10dp"
         android:contentDescription="@string/selected_photo" />
 
 </FrameLayout>
