--- a/res/layout/activity_color_picker.xml
+++ b/res/layout/activity_color_picker.xml
@@ -1,7 +1,14 @@
-<android.support.v4.view.ViewPager xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/pager"
+    android:id="@+id/container"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.scheme.ColorPickerActivity" />
-
+    tools:context="com.example.scheme.ColorPickerActivity"
+    tools:ignore="MergeRootFrame" >
+	
+    <ImageView android:id="@+id/current_color"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:contentDescription="@string/current_color" />
+    
+</FrameLayout>
