--- a/res/values/attrs.xml
+++ b/res/values/attrs.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <declare-styleable name="PinpointView">
-        </declare-styleable>
+
+    <declare-styleable name="PinpointView"></declare-styleable>
+
 </resources>
