--- a/res/layout/activity_color_picker.xml
+++ b/res/layout/activity_color_picker.xml
@@ -5,10 +5,26 @@
     android:layout_height="match_parent"
     tools:context="com.example.scheme.ColorPickerActivity"
     tools:ignore="MergeRootFrame" >
-	
-    <ImageView android:id="@+id/current_color"
+
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:contentDescription="@string/current_color" />
-    
+        android:orientation="vertical" >
+    </LinearLayout>
+
+    <TextView
+        android:id="@+id/current_hexcode"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:contentDescription="@string/current_hexcode"
+        android:padding="10dp" />
+
+    <TextView
+        android:id="@+id/current_info"
+        android:layout_width="match_parent"
+        android:layout_height="fill_parent"
+        android:contentDescription="@string/current_info"
+        android:padding="10dp"
+        android:layout_marginTop="70dp" />
+
 </FrameLayout>
