--- a/res/layout/fragment_color_picker_activity.xml
+++ b/res/layout/fragment_color_picker_activity.xml
@@ -1,21 +1,38 @@
 <android.support.v4.view.ViewPager xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/pager"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent" >
 
-    <!--
-    This title strip will display the currently visible page title, as well as the page
-    titles for adjacent pages.
-    -->
-    <android.support.v4.view.PagerTitleStrip android:id="@+id/pager_title_strip"
+    <android.support.v4.view.PagerTitleStrip
+        android:id="@+id/pager_title_strip"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="top"
         android:background="#000000"
-        android:textColor="#fff"
+        android:paddingBottom="4dp"
         android:paddingTop="4dp"
-        android:paddingBottom="4dp" />
-    
-    	
+        android:textColor="#fff" />
+
+    <LinearLayout
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        android:id="@+id/panel"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom"
+        android:orientation="vertical" >
+
+        <com.example.scheme.SchemingView
+            android:id="@+id/triad"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:gravity="center"
+            android:padding="32dp"
+            android:textSize="20sp"
+            android:textColor="#fff"
+            android:background="#000000"
+            android:alpha="0.5"
+            android:visibility="invisible" />
+    </LinearLayout>
 
 </android.support.v4.view.ViewPager>
