--- a/res/values/attrs.xml
+++ b/res/values/attrs.xml
@@ -6,6 +6,7 @@
     <declare-styleable name="SlidingPanel">
         <attr name="speed" format="integer" />
         <attr name="targetHeight" format="dimension" />
+        <attr name="panelGravity" format="string" />
     </declare-styleable>
 
 </resources>
