--- a/res/layout/fragment_colorpicker_object.xml
+++ b/res/layout/fragment_colorpicker_object.xml
@@ -6,15 +6,14 @@
     tools:context="com.example.scheme.MainActivity"
     tools:ignore="MergeRootFrame" >
 
-    <EditText
+    <TextView
         android:id="@android:id/text1"
         android:inputType="none"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:gravity="center"
         android:padding="32dp"
-        android:textSize="20sp"
-        android:cursorVisible="false" />
+        android:textSize="20sp" />
 	
     <com.example.scheme.SchemingView 
         android:id="@+id/scheme"
