--- a/res/layout/fragment_color_picker_activity.xml
+++ b/res/layout/fragment_color_picker_activity.xml
@@ -203,7 +203,7 @@
             android:layout_height="0dp"
             android:layout_marginTop="30dp"
             android:layout_weight="1"
-            android:gravity="left"
+            android:gravity="top"
             android:visibility="gone"
             app:panelGravity="left"
             app:speed="200"
