--- a/res/layout/fragment_adjust_dialog.xml
+++ b/res/layout/fragment_adjust_dialog.xml
@@ -5,7 +5,8 @@
     android:orientation="vertical"
     android:padding="20dp">
     
-    <TextView 
+    <TextView
+        android:id="@+id/seek_hue_text" 
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/hue"/>
@@ -16,6 +17,7 @@
         android:layout_height="wrap_content" />
     
      <TextView 
+        android:id="@+id/seek_sat_text" 
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/sat"/>
@@ -25,7 +27,8 @@
         android:layout_width="fill_parent"
         android:layout_height="wrap_content" />
     
-     <TextView 
+     <TextView
+        android:id="@+id/seek_val_text"  
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/val"/>
