--- a/res/drawable/seekbar_bg1.xml
+++ b/res/drawable/seekbar_bg1.xml
@@ -10,7 +10,7 @@
 <item android:id="@+id/progressshape">
 <clip>
   <shape>
-    <solid android:color="@android:color/white" />
+    <solid android:color="@android:color/black" />
   </shape>
 </clip>
 </item>
