--- a/res/drawable/seekbar_bg1.xml
+++ b/res/drawable/seekbar_bg1.xml
@@ -3,7 +3,7 @@
 
  <item android:id="@android:id/background">
   <shape>
-    <solid android:color="@android:color/transparent" />
+    <solid android:color="@android:color/background_light" />
   </shape>
 </item>
 
