--- a/res/layout/fragment_palette_dialog.xml
+++ b/res/layout/fragment_palette_dialog.xml
@@ -8,8 +8,7 @@
         android:layout_width="240dp"
         android:layout_height="match_parent"
         android:layout_gravity="start"
-        android:background="#111"
-        android:choiceMode="singleChoice"
+        android:choiceMode="multipleChoice"
         android:divider="@android:color/transparent"
         android:dividerHeight="0dp" />
 
