--- a/res/layout/palette_choice_item.xml
+++ b/res/layout/palette_choice_item.xml
@@ -3,7 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:gravity="center_vertical"
-    android:paddingLeft="16dp"
-    android:paddingRight="16dp"
-    android:textColor="#fff"
+    android:padding="20dp"
+    android:textColor="#000"
+    android:textSize="20sp"
     android:background="?android:attr/activatedBackgroundIndicator"/>
