instance of other class

--- a/res/layout/palette_choice_item.xml
+++ b/res/layout/palette_choice_item.xml
@@ -1,5 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
-<TextView xmlns:android="http://schemas.android.com/apk/res/android"
+<!-- <TextView xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:gravity="center_vertical"
+    android:padding="20dp"
+    android:textColor="#000"
+    android:textSize="20sp"
+    android:background="?android:attr/activatedBackgroundIndicator"/> -->
+
+<CheckedTextView
+   	xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:gravity="center_vertical"
