--- a/res/layout/palette_choice_item.xml
+++ b/res/layout/palette_choice_item.xml
@@ -1,15 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<!-- <TextView xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:gravity="center_vertical"
-    android:padding="20dp"
-    android:textColor="#000"
-    android:textSize="20sp"
-    android:background="?android:attr/activatedBackgroundIndicator"/> -->
-
-<CheckedTextView
-   	xmlns:android="http://schemas.android.com/apk/res/android"
+<!--
+     <TextView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:gravity="center_vertical"
@@ -17,3 +8,26 @@
     android:textColor="#000"
     android:textSize="20sp"
     android:background="?android:attr/activatedBackgroundIndicator"/>
+-->
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:padding="20dp" >
+
+    <CheckedTextView
+        android:id="@+id/checked_text"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="?android:attr/activatedBackgroundIndicator"
+        android:gravity="center_vertical"
+        android:textColor="#000"
+        android:textSize="20sp" />
+
+    <CheckBox
+        android:id="@+id/checkBox"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentLeft="true"
+        android:focusable="false" />
+
+</RelativeLayout>
