--- a/res/layout/palette_choice_item.xml
+++ b/res/layout/palette_choice_item.xml
@@ -9,20 +9,22 @@
     android:textSize="20sp"
     android:background="?android:attr/activatedBackgroundIndicator"/>
 -->
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<!-- <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:padding="20dp" >
+    android:padding="20dp" > -->
 
     <CheckedTextView
+        xmlns:android="http://schemas.android.com/apk/res/android"
         android:id="@+id/checked_text"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="?android:attr/activatedBackgroundIndicator"
         android:gravity="center_vertical"
         android:textColor="#000"
-        android:textSize="20sp" />
-
+        android:textSize="20sp"
+         android:padding="20dp"  />
+<!-- 
     <CheckBox
         android:id="@+id/checkBox"
         android:layout_width="wrap_content"
@@ -30,4 +32,4 @@
         android:layout_alignParentLeft="true"
         android:focusable="false" />
 
-</RelativeLayout>
+</RelativeLayout> -->
