--- a/res/menu/my_palettes.xml
+++ b/res/menu/my_palettes.xml
@@ -12,5 +12,10 @@
         android:orderInCategory="100"
         android:title="@string/action_settings"
         app:showAsAction="never"/>
+    
+    <item android:id="@+id/action_websearch"
+         android:orderInCategory="100"
+          android:title="@string/action_websearch"
+          android:showAsAction="ifRoom|withText" />
 
 </menu>
