--- a/res/menu/my_palettes.xml
+++ b/res/menu/my_palettes.xml
@@ -4,18 +4,25 @@
     tools:context="com.example.scheme.MyPalettesActivity" >
 
     <item
-        android:id="@+id/action_example"
-        android:title="@string/action_example"
-        app:showAsAction="withText|ifRoom"/>
-    <item
-        android:id="@+id/action_settings"
+        android:id="@+id/action_create_palette"
         android:orderInCategory="100"
-        android:title="@string/action_settings"
-        app:showAsAction="never"/>
+        android:title="@string/action_create_palette"
+        app:showAsAction="always" />
     
-    <item android:id="@+id/action_websearch"
+    <item
+        android:id="@+id/action_rename_palette"
+        android:title="@string/action_rename_palette"
+        app:showAsAction="withText|ifRoom"/>
+    
+    <item android:id="@+id/action_edit_palette"
          android:orderInCategory="100"
-          android:title="@string/action_websearch"
+          android:title="@string/action_edit_palette"
           android:showAsAction="ifRoom|withText" />
+    
+    <item
+        android:id="@+id/action_delete_palette"
+        android:orderInCategory="100"
+        android:title="@string/action_delete_palette"
+        app:showAsAction="never"/>
 
 </menu>
