--- a/res/layout/fragment_palette.xml
+++ b/res/layout/fragment_palette.xml
@@ -14,10 +14,9 @@
   limitations under the License.
   -->
 
-<ImageView xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/image"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/palette_container"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#000000"
-    android:gravity="center"
-    android:padding="32dp" />
+    android:padding="20dp" />
