--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -4,48 +4,49 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="com.example.scheme.MainActivity"
-    tools:ignore="MergeRootFrame" >
+    tools:ignore="MergeRootFrame"
+    android:background="@drawable/schemetitle" >
 
     <ImageView
         android:id="@+id/to_palettes"
-        android:layout_width="fill_parent"
-        android:layout_height="fill_parent"
+        android:layout_width="100dp"
+        android:layout_height="100dp"
         android:contentDescription="@string/app_name"
-        android:scaleType="center"
-        android:src="@drawable/ic_launcher" />
+        android:layout_gravity="center"
+        android:src="@drawable/palettesicon" />
     
     <ImageView
             android:id="@+id/to_gallery"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="120dp"
+            android:layout_height="120dp"
             android:layout_marginBottom="60dp"
             android:padding="20dp"
             android:layout_gravity="center_horizontal|bottom"
             android:contentDescription="@string/to_gallery"
-            android:src="@drawable/ic_launcher" />
+            android:src="@drawable/galleryicon" />
     
         <ImageView
             android:id="@+id/to_camera"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="120dp"
+            android:layout_height="120dp"
             android:layout_marginBottom="60dp"
             android:padding="20dp"
-            android:layout_marginLeft="20dp"
+            android:layout_marginLeft="10dp"
             android:paddingRight="15dp"
             android:layout_gravity="left|bottom"
             android:contentDescription="@string/to_camera"
-            android:src="@drawable/ic_launcher" />
+            android:src="@drawable/cameraicon" />
         
         <ImageView
             android:id="@+id/to_picker"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="120dp"
+            android:layout_height="120dp"
             android:layout_marginBottom="60dp"
             android:padding="20dp"
-            android:layout_marginRight="20dp"
+            android:layout_marginRight="10dp"
             android:paddingLeft="15dp"
             android:layout_gravity="right|bottom"
             android:contentDescription="@string/to_picker"
-            android:src="@drawable/ic_launcher" />
+            android:src="@drawable/colorpickericon" />
 
 </FrameLayout>
